-Added a roll table. Currently does not scroll down, so can't see all of the results.
-Fractions now rounded to 2 decimal places

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
     <string name="app_name">Drop Rate Calculator</string>
     <string name="edit_divisor">1</string>
-    <string name="button_send">Calculate</string>
+    <string name="button_send">Roll</string>
     <string name="text_enterValue">Enter a non-negative number between 0 and 1 (e.g. 0.5, 0.224)</string>
     <string name="text_dividend">1</string>
     <string name="text_divisonSign">/</string>
+    <string name="text_enterRolls">How many rolls do you want to make? (1 to 1000)</string>
+    <string name="text_dropRate">Drop Rate:</string>
+    <string name="text_rollCount">Rolls:</string>
+    <string name="text_dropRateText">Drop Rate:</string>
+    <string name="text_RollTotalText">Total Rolls:</string>
+    <string name="text_Fraction">(1/1)</string>
+    <string name="text_rollCountText">Roll Table</string>
+    <string name="text_percent">%</string>
 </resources>
