--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="text_enterValue">Enter a value between 0 and 1 (e.g. 0.5, 0.224)</string>
     <string name="text_dividend">1</string>
     <string name="text_divisonSign">/</string>
-    <string name="text_enterRolls">How many rolls do you want to make? (1 to 1000)</string>
+    <string name="text_enterRolls">How many rolls do you want to make? (1 to 10,000)</string>
     <string name="text_dropRate">Drop Rate:</string>
     <string name="text_rollCount">Rolls:</string>
     <string name="text_dropRateText">Drop Rate:</string>
@@ -13,4 +13,6 @@
     <string name="text_Fraction">(1/1)</string>
     <string name="text_rollCountText">Roll Table</string>
     <string name="text_percent">%</string>
+    <string name="text_weightText">Enter a weight (default is 1). Higher number = harder to reach lower values. Value can\'t be zero or negative. Extreme numbers not recommended!</string>
+    <string name="text_weightResult">Weight:</string>
 </resources>
