-Implemented hit rate. -Seed value is now displayed. -User can enter their own seed value. -Made it so that the same seed is used every time. Need to add an option to use a new seed if the user doesn't want to enter one manually. -Fixed up the constraints now that I have a better understanding of them.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="text_hitCount">Hit Count:</string>
     <string name="text_hitRate">Hit Rate:</string>
     <string name="text_hitLocations">Hit Locations:</string>
+    <string name="text_enterSeed">Enter a seed value (Optional)</string>
+    <string name="text_seedValue">Seed:</string>
 </resources>
