--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="text_buttonHide">HIDE</string>
     <string name="text_buttonShow">SHOW</string>
     <string name="text_rollCountText">TABLE OF SUCCESSFUL ROLLS</string>
+    <string name="menu_copy">Copy results to clipboard</string>
 </resources>
